# Adaptive-RL-Quantization

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  _repo_entrypoint.py  config.docker.gpu_smoke.json  config.e2e_smoke.json  config.example.json  config.example.post_train.json  config.example.pytorch.toml  config.py  config.pytorch_smoke.json  config.sweep.example.json  config_3090.py  config_4090.py  config_4090_universal.py  config_gpu.py  config_moe.py  config_online.py  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  run  run_4090_universal.py  run_analyze.py  run_calibrate_llama_cpp.py  run_moe_research.py  (+11 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  pip-audit-scheduled.yml  secret-scan.yml
.well-known/: security.txt
adaptive_quant/: __init__.py  _tomllib_minimal.py  analysis_utils.py  backend.py  base_trainer.py  benchmark.py  configuration.py  easy_config.py  entrypoints.py  environment.py  features.py  gpu_profiles.py  gpu_replay_buffer.py  hardware.py  huggingface_cli.py  logging_utils.py  math_utils.py  md_utils.py  model_routes.py  moe.py  online_learning.py  online_pipeline.py  paper_bundle.py  policy.py  prompts.py  quantization.py  recommendation.py  research_pipeline.py  route_pipeline.py  route_policy.py  routing.py  run_footer.py  runner_cli.py  stats_utils.py  torch_policy.py  torch_preflight.py  torch_trainer.py  trainer.py  trainer_utils.py  types.py
adaptive_quant/routes/: __init__.py  bandit.py  catalog.py  pipeline.py
analysis/: __init__.py  analyzers.py  hardware_generalization.py  input_adaptation.py  moe_cache_behavior.py  moe_expert_behavior.py  online_learning.py  quant_function_behavior.py  shim_support.py  training_dynamics.py
docs/: ARCHITECTURE.md  CONFIG.md  GPU_PROFILES.md  INSTALL.md  LOCAL_RESEARCH.md  ONLINE.md  PAPER.md  ROUTES.md  RUNNING.md  SECURE_RUN.md  SWEEP.md  TROUBLESHOOTING.md  USAGE.md
prompts/: post_train_library.json
requirements/: README.md  audit.in  audit.txt  ci.txt  dev.txt  pytorch-cpu.txt  pytorch.in
rust/: Cargo.toml
rust/adaptive_rl_sim/: Cargo.toml
rust/adaptive_rl_sim/src/: evaluate.rs  lib.rs  main.rs  types.rs
scripts/: _common.py  _resolve_venv_python.sh  build_rust.sh  ci_precheck.py  compile_locked_requirements.py  docker_gpu_device_probe.py  docker_secure_preflight.sh  env_report.py  install_cuda_torch.py  nvidia_secure_startup.py  pre_commit_check.py  pre_commit_check.sh  run_4090_pipeline.sh  run_setup_tests.py  secret_scan.py  secret_scan.sh  setup_from_clone.py  setup_from_clone.sh  verify_hashes.py  verify_lockfiles.py
security/: dependency_hashes.json
src/: bootstrap.py  config.py  config_3090.py  config_4090.py  config_4090_universal.py  config_gpu.py  config_moe.py  config_online.py
src/adaptive_quant/: __init__.py  _tomllib_minimal.py  analysis_utils.py  backend.py  base_trainer.py  benchmark.py  checkpoint_integrity.py  compat_tomllib.py  easy_config.py  environment.py  experiment_aggregate.py  features.py  gpu_profiles.py  guardrails.py  hardware.py  huggingface_cli.py  logging_utils.py  math_utils.py  model_routes.py  moe.py  nvidia_secure_boundary.py  online_learning.py  online_pipeline.py  paper_bundle.py  policy.py  policy_heads.py  prompts.py  quantization.py  recommendation.py  replay_trace.py  repo_paths.py  research_pipeline.py  reward.py  route_pipeline.py  route_policy.py  router_training.py  routing.py  run_footer.py  runner_cli.py  rust_cli.py  (+11 more)
src/adaptive_quant/backends/: __init__.py  llama_cpp.py  protocol.py  quality.py  registry.py  simulator.py
src/adaptive_quant/cli/: __init__.py  alignment.py  analyze.py  calibrate_llama_cpp.py  common.py  moe_research.py  multiseed.py  online_learning.py  presets.py  pytorch.py  replay.py  research.py  route_learning.py  startup_overrides.py  sweep.py
src/adaptive_quant/configuration/: __init__.py  flat_access.py  framework.py  reward.py  sections.py  validation.py
src/adaptive_quant/llm_alignment/: __init__.py  config.py  data_collator.py  dpo_loss.py  dpo_trainer.py  model_loading.py  preference_data.py
src/adaptive_quant/pipeline/: __init__.py  analysis_runner.py  artifacts.py  benchmark_warn.py  gguf_export.py  output_summary.py  report_markdown.py  research_contract.py  topology.py  vcs.py
src/adaptive_quant/presets/: __init__.py  baseline.py  gpu.py  moe.py  online.py  post_train.py  rtx3090.py  rtx4090.py  (+1 more)
src/analysis/: __init__.py  __main__.py  _bootstrap.py  _legacy_shim.py  analyzers.py  hardware_generalization.py  input_adaptation.py  log_records.py  moe_cache_behavior.py  moe_expert_behavior.py  online_learning.py  quant_function_behavior.py  shim_support.py  training_dynamics.py
tests/: __init__.py  test_alignment_cli.py  test_analysis_analyzers.py  test_backends_unit.py  test_calibrate_cli.py  test_checkpoint_safe.py  test_cli_behavior.py  test_config_validation.py  test_discrete_precision.py  test_dpo_collator.py  test_dpo_loss.py  test_dpo_trainer.py  test_easy_config.py  test_experiment_aggregate.py  test_features.py  test_framework.py  test_gguf_export.py  test_guardrails.py  test_instability_fallback.py  test_install_cuda_torch.py  test_llama_cpp_hardening.py  test_llama_cpp_parsing.py  test_logging_utils.py  test_multiseed.py  test_multiseed_aggregation.py  test_nvidia_secure_boundary.py  test_online_router.py  test_output_schema.py  test_output_summary.py  test_paper_bundle.py  test_phase_filter.py  test_pipeline_unit.py  test_policy_heads.py  test_preference_data.py  test_presets_and_shims.py  test_prompt_split.py  test_redteam_hardening.py  test_replay_cli.py  test_replay_trace.py  test_repo_paths.py  (+14 more)
tests/fixtures/: analysis_eval.jsonl  analysis_learned.jsonl  analysis_moe.jsonl  online_telemetry.jsonl  training_history.json
(+1 files in other folders)
