[build-system]
# Used only while installing/building the package; not runtime deps. pip fetches this in an isolated env.
# setuptools 82.0.1 is hash-pinned in requirements/ci.txt for reproducible bootstrap installs.
requires = ["setuptools==82.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-rl-quant"
version = "0.1.0"
description = "Train an RL policy to pick quantization settings for llama.cpp-style inference (simulator or real binary); optional PyTorch GPU training."
readme = "README.md"
requires-python = ">=3.11"
# PEP 639: SPDX license expression + explicit license file list.
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Legendarylibrorg" }]
keywords = [
    "reinforcement-learning",
    "quantization",
    "llama.cpp",
    "model-compression",
    "research",
]
# PEP 639 deprecates the `License ::` trove classifier when an SPDX expression is set.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# Simulator + analysis: stdlib only (e.g. json, tomllib). llama.cpp is an external binary, not a Python dep.
dependencies = []

[project.urls]
Homepage = "https://github.com/Legendarylibrorg/Adaptive-RL-Quantization"
Repository = "https://github.com/Legendarylibrorg/Adaptive-RL-Quantization"
Documentation = "https://github.com/Legendarylibrorg/Adaptive-RL-Quantization#readme"
Issues = "https://github.com/Legendarylibrorg/Adaptive-RL-Quantization/issues"
Security = "https://github.com/Legendarylibrorg/Adaptive-RL-Quantization/security/policy"

[project.scripts]
adaptive-rl-quant = "adaptive_quant.cli.research:main"
adaptive-rl-quant-moe = "adaptive_quant.cli.moe_research:main"
adaptive-rl-quant-pytorch = "adaptive_quant.cli.pytorch:main"
adaptive-rl-quant-online = "adaptive_quant.cli.online_learning:main"
adaptive-rl-quant-multiseed = "adaptive_quant.cli.multiseed:main"
adaptive-rl-quant-sweep = "adaptive_quant.cli.sweep:main"
adaptive-rl-quant-calibrate = "adaptive_quant.cli.calibrate_llama_cpp:main"
adaptive-rl-quant-route = "adaptive_quant.cli.route_learning:main"
adaptive-rl-quant-replay = "adaptive_quant.cli.replay:main"
adaptive-rl-quant-alignment = "adaptive_quant.cli.alignment:main"
adaptive-rl-quant-analyze = "analysis.__main__:main"

[project.optional-dependencies]
# Sole PyPI runtime extra — PyTorch for training_backend="pytorch" / run_pytorch.py.
# pip install -e ".[torch]" often resolves a CPU-only wheel; on Linux + NVIDIA run:
#   python scripts/install_cuda_torch.py
# or install a CUDA wheel first (PyTorch 2.12+: cu130 default, cu126 legacy; cu128 removed):
#   python -m pip install torch --index-url https://download.pytorch.org/whl/cu130
# then: pip install -e .
torch = ["torch>=2.12.0"]
# Optional: Hugging Face CLI for route downloads (`hf` / `huggingface-cli`).
hub = ["huggingface_hub>=1.18.0"]
# Optional: Hugging Face embedding router (used when router_feature_backend="hf").
# On Linux + NVIDIA: run scripts/install_cuda_torch.py first, then pip install -e ".[router]".
# transformers already pulls safetensors; no separate pin needed.
router = ["transformers>=5.10.2"]
# Optional: DPO / preference alignment (llm_alignment package).
# On Linux + NVIDIA: run scripts/install_cuda_torch.py first, then pip install -e ".[alignment]".
alignment = [
    "transformers>=5.10.2",
    "peft>=0.14.0",
    "bitsandbytes>=0.45.0; platform_system != 'Darwin'",
]
# Local quality + CI audit (hash-pinned via requirements/dev.txt).
dev = [
    "coverage[toml]>=7.14.1",
    "mypy>=2.1.0",
    "pip-audit>=2.10.0",
    "ruff>=0.15.16",
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["config"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = [
    "E501", # line length — project uses long strings and tables
    "UP037", # quoted forward references intentionally retained for clarity
    "UP042", # `(str, Enum)` is intentional — `StrEnum` has subtly different __str__/__format__ semantics
]

[tool.ruff.lint.isort]
known-first-party = ["adaptive_quant", "analysis"]

[tool.ruff.lint.per-file-ignores]
# Repo-root runners insert src/ on sys.path before importing adaptive_quant.
"run_*.py" = ["E402"]
"_repo_entrypoint.py" = ["E402"]
"src/analysis/__main__.py" = ["E402"]

[tool.coverage.run]
source = ["adaptive_quant", "analysis"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 72
show_missing = true
skip_empty = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "adaptive_quant.torch_trainer",
    "adaptive_quant.torch_policy",
    "adaptive_quant.llm_alignment.model_loading",
    "adaptive_quant.llm_alignment.dpo_trainer",
    "adaptive_quant.llm_alignment.data_collator",
]
ignore_missing_imports = true
